# raylib-bubbles

./: .deepsource.toml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
include/: action.hpp  board.hpp  effect.hpp  lissajous.hpp  util.hpp  window.hpp
lib/inipp/: CMakeLists.txt
src/: CMakeLists.txt  action.cpp  board.cpp  lissajous.cpp  main.cpp  util.cpp  window.cpp
src/animation/: action.cpp  action.hpp  lissajous.cpp
src/game/: board.hpp  game.hpp
src/raylib/: window.hpp
src/utility/: util.cpp  util.hpp
static/: INSTRUCTIONS.md  bubbles.ini
